NetBSD Problem Report #58062

From www@netbsd.org  Thu Mar 21 21:29:10 2024
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id D231E1A9239
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 21 Mar 2024 21:29:09 +0000 (UTC)
Message-Id: <20240321212908.776051A923A@mollari.NetBSD.org>
Date: Thu, 21 Mar 2024 21:29:08 +0000 (UTC)
From: vezhlys@gmail.com
Reply-To: vezhlys@gmail.com
To: gnats-bugs@NetBSD.org
Subject: sysinst doesn't seem to react ftp protocol config on "pkgin" installation
X-Send-Pr-Version: www-1.0

>Number:         58062
>Category:       install
>Synopsis:       sysinst doesn't seem to react ftp protocol config on "pkgin" installation
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 21 21:30:00 +0000 2024
>Closed-Date:    Mon Mar 25 08:54:31 +0000 2024
>Last-Modified:  Mon Mar 25 08:54:31 +0000 2024
>Originator:     Andrius V
>Release:        NetBSD 10 RC6
>Organization:
>Environment:
>Description:
Once NetBSD is installed, additional configuration items are presented. One choice is "Enable installation of binary packages". Once I configured network I tried to download pkgin ("Install pkgin and update package summary") and got some failure. Thus, I decided to change User to "anonymous" and Download via to ftp (instead of http). I clicked "Install pkgin and update package summary" again. However, the command I could see was still using http protocol to download, not ftp. Also user was not changed. 

Changing protocol to https seems to always react to the configuration changes though and actually uses https or the "user" configured. However, trying to change back to http or ftp after that again seems to be ignored.
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: install-manager->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Fri, 22 Mar 2024 18:38:11 +0000
Responsible-Changed-Why:
my bug


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58062 CVS commit: src/usr.sbin/sysinst
Date: Sun, 24 Mar 2024 16:06:37 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Mar 24 16:06:37 UTC 2024

 Modified Files:
 	src/usr.sbin/sysinst: configmenu.c

 Log Message:
 PR 58062: fix a bug I introduced with the https support: update
 the pkgsrc/binary pkgs download URL not only when https transport
 is selected.


 To generate a diff of this commit:
 cvs rdiff -u -r1.18 -r1.19 src/usr.sbin/sysinst/configmenu.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 24 Mar 2024 16:12:01 +0000
State-Changed-Why:
Fixed in head, waiting for [pullup-10 #644]


From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58062 CVS commit: [netbsd-10] src/usr.sbin/sysinst
Date: Sun, 24 Mar 2024 20:26:14 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Mar 24 20:26:14 UTC 2024

 Modified Files:
 	src/usr.sbin/sysinst [netbsd-10]: configmenu.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #644):
 	usr.sbin/sysinst/configmenu.c: revision 1.19
 PR 58062: fix a bug I introduced with the https support: update
 the pkgsrc/binary pkgs download URL not only when https transport
 is selected.


 To generate a diff of this commit:
 cvs rdiff -u -r1.17.2.1 -r1.17.2.2 src/usr.sbin/sysinst/configmenu.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Mon, 25 Mar 2024 08:54:31 +0000
State-Changed-Why:
pullups complete


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.