PR 58062: fix a bug I introduced with the https support: update the pkgsrc/binary pkgs download URL not only when https transport is selected.